syntax = "proto3";

option go_package = "linkany/management/grpc/mgt";

// The Management service definition.
service ManagementService {

  rpc Login(ManagementMessage) returns (ManagementMessage) {}

  rpc Get (ManagementMessage) returns (ManagementMessage) {}

  rpc List (ManagementMessage) returns (ManagementMessage) {}

  rpc Watch (stream ManagementMessage) returns (stream ManagementMessage) {}

  rpc Keepalive(stream ManagementMessage) returns (stream ManagementMessage) {}

  rpc Registry (ManagementMessage) returns (ManagementMessage) {}

  // valid token for service
  rpc VerifyToken(ManagementMessage) returns (ManagementMessage) {}
}

// ControlMessage is dynamic message for kind to request and response
message ManagementMessage  {
  string pub_key = 1;
  bytes body = 2;
  int32 encrypt = 3;
  int32 version = 4;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
}

message Request {
  string pub_key = 1;
  string appId = 2;
  string token = 3;
}

//message Peer {
//  string privateKey = 1;
//  string publicKey = 2;
//  string endpoint = 3;
//  string address = 4;
//  string allowedIps = 5;
//  int32  persistentKeepalive = 6;
//}

//message NetworkMap {
//  string userId = 1;
//  Peer peer = 2;
//  repeated Peer peers = 3;
//}

message WatchMessage {
  EventType type = 1;
  bytes body = 2;
}

enum EventType {
  ADD = 0;
  UPDATE = 1;
  DELETE = 2;
}